--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -17,39 +17,42 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
+  <!-- 不同的主题替换body部分即可 Replace the body section with different theme's default.html -->
   <body>
+    {% if site.theme != 'jekyll-theme-cayman' %}
     <div>
       <nav>
         <ul></ul>
       </nav>
     </div>
+    {% endif %}
     <div class="wrapper">
-      <header {% unless site.description or site.github.project_tagline %} class="without-description" {% endunless %}>
-        <h1><a href="{{ site.url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+      <header class="page-header {% unless site.description or site.github.project_tagline %} without-description {% endunless %}">
+        <h1 class="project-name" ><a href="{{ site.url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         {% if site.description or site.github.project_tagline %}
-          <p>{{ site.description | default: site.github.project_tagline }}</p>
+          <p class="project-tagline">{{ site.description | default: site.github.project_tagline }}</p>
         {% endif %}
         <div id="banner">
         <span id="logo"></span>
-        <div class="downloads">
-        <ul>  
+        <div class="downloads {% if site.theme != 'jekyll-theme-leap-day' and site.theme != 'jekyll-theme-modernist' %}cayman-header-banner{% endif %}">
+        <ul>
         {% if site.show_downloads %}  
-          <li><a href="{{ site.github.zip_url }}" class="button">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}" class="button">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="{{ site.github.zip_url }}" class="btn button">Download <strong>ZIP File</strong></a></li>
+          <li><a href="{{ site.github.tar_url }}" class="btn button">Download <strong>TAR Ball</strong></a></li>
         {% endif %}
-          <li><a href="{{ site.github.repository_url }}" class="button fork">View On <strong>GitHub</strong></a></li>
-          <li><a href="{{ site.url }}" class="button">Return <strong>Home</strong></a></li>
+          <li><a href="{{ site.github.repository_url }}" class="btn button fork">View On <strong>GitHub</strong></a></li>
+          <li><a href="{{ site.url }}" class="btn button">Return <strong>Home</strong></a></li>
         </ul>
         </div>
         </div>
       </header>
-      <section>
+      <section id="content" class="main-content" role="main">
 
       {{ content }}
 
       </section>
     </div>
-    <footer>
+    <footer class="main-content site-footer">
     {% if site.github.is_project_page %}
       <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
     {% endif %}
