--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,11 +7,11 @@ nav ul { list-style: none; list-style-image: none; font-size: 14px; line-height:
 nav ul li { padding: 5px 0px; line-height: 16px; }
 nav ul li.tag-h1 { font-size: 1.2em; }
 nav ul li.tag-h1 a { font-weight: bold; color: #333; }
-nav ul li.tag-h2 { font-size: 1em; }
-nav ul li.tag-h2 a { font-weight: bold; color: #666; }
+nav ul li.tag-h2 { font-size: 1.1em; }
+nav ul li.tag-h2 a { font-weight: bold; color: #555; }
 nav ul li.tag-h2 + .tag-h1 { margin-top: 10px; }
-nav ul a { color: #666; text-shadow: 0px 0px 5px #D4D4D4; }
-nav ul a:hover { color: #999; text-shadow: 0px 0px 0px #D4D4D4; }
+nav ul a { color: #555; text-shadow: 0px 0px 4px #F4F4F4; }
+nav ul li a:hover { color: #58F; font-weight: bold; text-shadow: 0px 0px 0px #AAA; }
 
 div #comments_list ul { list-style: none; list-style-image: none; padding-left: 0px; }
 .comment { position: relative; min-height: 60px; margin: 10px 0; }
@@ -20,3 +20,6 @@ div #comments_list ul { list-style: none; list-style-image: none; padding-left: 
 .comment-content { font-size: 1em; border: 1px solid #93939a; border-radius: 3px; margin-left: 8%; }
 .comment-body { position: relative; margin: 4px 10px; }
 .comment-footer { font-size: 0.8em; text-align: right; margin-right: 5px; }
+
+.cayman-header-banner ul { list-style:none; }
+.cayman-header-banner li { display: inline-block; margin: 4px; }
